tests/invalid/runtime/view_oob.pts
function main() : void {
    list<int> xs = [1, 2, 3];
    view<int> v = xs.view(2, 2);
}
